# src_platform_gen-crypt

./: .clang-format-3.7  .gitignore  AUTHORS  CHANGELOG  Doxyfile  Makefile  Makefile.in  README.md  configure.ac  format.sh  test.sh
man/: gencrypt-check.pod  gencrypt-sign.pod
src/: arutils.c  change_pkg_sig.c  check.c  check_client.c  check_daemon.c  civil-chk_ctx.c  civil-chk_ctx.h  civil-crypto.c  civil-protos.h  civil-structures.c  civil-structures.h  common-protos.h  file.c  gen-crypt.dox  gen_crypt.h  sign.c  truncate_sig.c  x509_get_ext.c  x509_get_ext.h
test/: 01_prepare_mirror.sh  02_check_mirror.sh  03_check_daemon_mirror.sh  04_cli_args_checks.py  04_cli_args_checks.sh  check_package.sh  cli_fuzzer.py  environment.civil.sh  environment.sh  functions.sh  sign_package.sh
test/CA/: bad_cert.py  create_bad_pki.sh  create_test_ca.functions.bash  create_test_ca.sh  environment.sh
test/CA/config/: controller_CA_inputs.txt  controller_SubCA_inputs.txt  controller_cert_inputs.txt  developer_CA_inputs.txt  developer_SubCA_inputs.txt  developer_cert_inputs.txt
test/CA/config/1CA_2SubCA/: controller.cnf  developer.cnf
test/CA/config/2CA_NoSubCA/: controller.cnf  developer.cnf
